Fixed export not showing spectrum

--- a/src/CAMV.css
+++ b/src/CAMV.css
@@ -66,7 +66,7 @@ text.shadow {
 
 #fragmentSpectrumBox {
   height: 100%;
-  width: 75%;
+  width: 74%;
 }
 
 .baseSpectrumChart {
